# RMG-actually-a-database

./: .gitignore  README.md  pyproject.toml  setup.py
rmgdatabase/: __init__.py  forbiddenStructures.py  tree_str_to_pairs.py
rmgdatabase/kinetics/families/: recommended.py
rmgdatabase/quantum_corrections/: data.py
rmgdatabase/reference_sets/: README.md  make_reference_sets_table.py  reference_sets.db  reference_yml_files.tar.xz
rmgdatabase/solvation/: README.md  make_solvation_table.py  solvation.db  solvation_files.tar.xz
rmgdatabase/solvation/groups/: abraham.py  group.py  halogen.py  longDistanceInteraction_cyclic.py  longDistanceInteraction_noncyclic.py  nonacentered.py  polycyclic.py  radical.py  ring.py
rmgdatabase/solvation/libraries/: solute.py  solvent.py
rmgdatabase/statmech/: README.md  make_statmech_table.py  statmech.db  statmech_files.tar.xz
rmgdatabase/statmech/groups/: groups.py
rmgdatabase/statmech/libraries/: halogens_G4.py
rmgdatabase/surface/: README.md  make_surface_table.py  surface.db  surface_files.tar.xz
rmgdatabase/surface/libraries/: metal.py
rmgdatabase/thermo/: README.md  make_thermo_table.py
rmgdatabase/thermo/groups/: adsorptionNi111.py  adsorptionPt111.py  group.py  longDistanceInteraction_cyclic.py  longDistanceInteraction_noncyclic.py  polycyclic.py  radical.py  ring.py
rmgdatabase/transport/: README.md  make_transport_table.py  transport.db  transport_files.tar.xz
scripts/: evansPolanyi.py  exportKineticsLibraryToChemkin.py  importChemkinLibrary.py  process_family_images.py
(+577 files in other folders)
